--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "name": "רישום לידות 2026",
   "short_name": "לידות 2026",
   "description": "אפליקציה לניהול רשומות לידות לשנת 2026",
-  "start_url": "./index.html",
+  "start_url": "./",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#f9fafb",
   "theme_color": "#6366f1",
